<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/liveRegionFragment"
        android:name="com.example.android.basicandroidaccessibility.LiveRegionFragment"
        android:label="@string/fragment_live_region"
        tools:layout="@layout/fragment_live_region" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.android.basicandroidaccessibility.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_liveRegionFragment"
            app:destination="@id/liveRegionFragment" />
        <action
            android:id="@+id/action_homeFragment_to_contentGroupingFragment"
            app:destination="@id/contentGroupingFragment" />
        <action
            android:id="@+id/action_homeFragment_to_contentLabelingFragment"
            app:destination="@id/contentLabelingFragment" />
        <action
            android:id="@+id/action_homeFragment_to_expandTouchAreaFragment"
            app:destination="@id/expandTouchAreaFragment" />
        <action
            android:id="@+id/action_homeFragment_to_insufficientContrastFragment"
            app:destination="@id/insufficientContrastFragment" />
    </fragment>
    <fragment
        android:id="@+id/contentGroupingFragment"
        android:name="com.example.android.basicandroidaccessibility.ContentGroupingFragment"
        android:label="@string/fragment_content_grouping"
        tools:layout="@layout/fragment_content_grouping" />
    <fragment
        android:id="@+id/contentLabelingFragment"
        android:name="com.example.android.basicandroidaccessibility.ContentLabelingFragment"
        android:label="@string/fragment_content_labeling"
        tools:layout="@layout/fragment_content_labeling" />
    <fragment
        android:id="@+id/expandTouchAreaFragment"
        android:name="com.example.android.basicandroidaccessibility.ExpandTouchAreaFragment"
        android:label="@string/fragment_expand_touch_area"
        tools:layout="@layout/fragment_expand_touch_area" />
    <fragment
        android:id="@+id/insufficientContrastFragment"
        android:name="com.example.android.basicandroidaccessibility.InsufficientContrastFragment"
        android:label="@string/fragment_insufficient_contrast"
        tools:layout="@layout/fragment_insufficient_contrast" />
</navigation>